Fix z-index conflict with item controls and drawer.

--- a/assets/scss/admin/drawer.scss
+++ b/assets/scss/admin/drawer.scss
@@ -13,6 +13,7 @@
     &.nf-drawer-expand {
         width: 100%;
     }
+    z-index: 2;
 }
 .nf-drawer-opened {
     .nf-main-test {
